# COM-port_graphs

./: CMakeLists.txt  Main.qml  comemulator.cpp  comemulator.h  main.cpp  serialportreader.cpp  serialportreader.h
